début front connexion1

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               type="email"
               name="email"
               id="email"
-              placeholder="Enter email address..."
+              placeholder="jesuisqqn@free.fr"
               required
             />
           </div>
@@ -37,7 +37,7 @@
               type="text"
               name="username"
               id="username"
-              placeholder="Enter username..."
+              placeholder="Ex : Sébastien"
               required
             />
           </div>
