--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/style.css">
-    <title>Pigeon</title>
+    <title>Pigeon - A revolutionary chat app in NodeJs</title>
   </head>
   <body>
     <header>
@@ -25,6 +25,7 @@
         </nav>
     </header>
     <main>
+      <h1>Connection à la room</h1>
       <form action="chat.html">
         <div>
           <label for="email">E-mail</label>
