--- a/public/index.html
+++ b/public/index.html
@@ -8,49 +8,51 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
       integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
-      crossorigin="anonymous"/>
-    <title>Pigeon</title>
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>WebCage Chat App</title>
   </head>
   <body>
     <div class="join-container">
       <header class="join-header">
-        <h1><i class="fas fa-kiwi-bird"></i> Accéder à la room </h1>
+        <h1><i class="fas fa-kiwi-bird"></i> WebCage </h1>
       </header>
 
       <main class="join-main">
         <form action="chat.html">
           <div class="form-control">
-            <label for="email">E-mail</label>
+            <label for="email">Email Address</label>
             <input
               type="email"
               name="email"
               id="email"
-              placeholder="jesuisqqn@free.fr"
+              placeholder="Enter email address..."
               required
             />
           </div>
           <div class="form-control">
-            <label for="username">Identifiant</label>
+            <label for="username">Username</label>
             <input
               type="text"
               name="username"
               id="username"
-              placeholder="Ex : Sébastien"
+              placeholder="Enter username..."
               required
             />
           </div>
           <div class="form-control">
-            <label for="room">Topic</label>
+            <label for="room">Chat Channel</label>
             <select name="room" id="room">
               <option value="Business">Business </option>
-              <option value="Technology">Technologie</option>
-              <option value="Sport">Sport</option>
-              <option value="news">Actualités</option>
-              <option value="cats">Autres</option>
+              <option value="Technology">Technology</option>
+              <option value="Sport">Sports</option>
+              <option value="news">International News</option>
+              <option value="cats">Just Cats</option>
             </select>
           </div>
           <div class="flex">
-            <button type="submit" class="btn">Se connecter</button>
+            <button type="submit" class="btn">Login to Chat</button>
           </div>
         </form>
       </main>
