--- a/public/index.html
+++ b/public/index.html
@@ -24,32 +24,34 @@
           </ul>
         </nav>
     </header>
-    <main>
-      <h1>Connection à la room</h1>
-      <form action="chat.html">
-        <div>
-          <label for="email">E-mail</label>
-            <input
-              type="email"
-              name="email"
-              id="email"
-              placeholder="example@xyz.com"
-              required
-            />
-          </div>
-          <div>
-            <label for="username">Identifiant</label>
-            <input
-              type="text"
-              name="username"
-              id="username"
-              placeholder="Mon pseudo..."
-              required/>
-          </div>
-          <div>
-            <button type="submit">Se connecter</button>
-          </div>
-      </form>
+    <main class="flex flex-wrap justify-center">
+      <h1 class="text-5xl w-3/4 text-center mt-10">Connection à la room</h1>
+      <div class="bg-blue-700 w-1/2 m-auto mt-10">
+        <form action="chat.html" class="flex flex-wrap justify-center p-5">
+          <div class="mt-5 w-full flex justify-center items-center">
+            <label for="email" class="block mr-2 text-center w-20">E-mail</label>
+              <input class="rounded-3xl p-2 pl-3"
+                type="email"
+                name="email"
+                id="email"
+                placeholder="example@xyz.com"
+                required
+              />
+            </div>
+            <div class="mt-5 w-full flex justify-center items-center">
+              <label for="username" class="block mr-2 text-center w-20">Identifiant</label>
+              <input class="rounded-3xl p-2 pl-3"
+                type="text"
+                name="username"
+                id="username"
+                placeholder="Mon pseudo..."
+                required/>
+            </div>
+            <div class="mt-5 bg-gray-200 hover:bg-indigo-300 focus:outline-none rounded-3xl p-2 pr-3 pl-3 shadow-xl">
+              <button type="submit">Se connecter</button>
+            </div>
+        </form>
+      </div>
     </main>
   </body>
 </html>
