add css on bloc connexion update 1

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     </header>
     <main class="flex flex-wrap justify-center">
       <h1 class="text-5xl w-3/4 text-center mt-10">Connection à la room</h1>
-      <div class="bg-blue-700 w-1/2 m-auto mt-10">
+      <div class="bg-gray-200 w-1/2 m-auto mt-10">
         <form action="chat.html" class="flex flex-wrap justify-center p-5">
           <div class="mt-5 w-full flex justify-center items-center">
             <label for="email" class="block mr-2 text-center w-20">E-mail</label>
