--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,16 @@
                 placeholder="Mon pseudo..."
                 required/>
             </div>
+            <div class="mt-5 w-full flex justify-center items-center">
+              <label for="room" class="block mr-2 text-center w-20 text-gray-100">Choix de la room</label>
+              <select name="room" id="room" class="rounded-3xl p-2 pl-3">
+                <option value="Business">Business</option>
+                <option value="Développement">Développement</option>
+                <option value="Sports">Sports</option>
+                <option value="Actualités">News</option>
+                <option value="Chats">Chats</option>
+              </select>
+            </div>
             <div class="mt-5 bg-gray-200 hover:bg-indigo-300 focus:outline-none rounded-3xl p-2 pr-3 pl-3 shadow-xl">
               <button type="submit">Se connecter</button>
             </div>
