--- a/public/chat.html
+++ b/public/chat.html
@@ -3,13 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-    integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
-    crossorigin="anonymous"
-  />
   <link rel="stylesheet" href="css/output.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Pigeon - Your Room</title>
 </head>
 <body class="bg-gray-700">
@@ -30,31 +25,31 @@
     </nav>
   </header>
   <main class="chat-main flex">
-    <div class="chat-sidebar">
+    <div class="chat-sidebar bg-gray-800">
       <h2 id="room-name"></h2>
         <h3><i class="fas fa-user"></i> Online</h3>
         <ul id="users">
         </ul>
+        <a href="index.html" class="btn bg-indigo-300 hover:bg-gray-100 text-black" id="leave-btn">Quitter la room</a>
       </div>
-      <a href="index.html" class="btn" id="leave-btn">Leave Room</a>
       <div class="chat-messages">
       </div>
     </main>
     
-    <div class="chat-form-container">
+    <div class="chat-form-container bg-black absolute w-full">
       <form id="chat-form">
         <input
           id="msg"
           type="text"
-          placeholder="Type a Message"
+          placeholder="Entrez un message"
           required
           autocomplete="off"
         />
-        <button class="btn-plane"><i class="fas fa-paper-plane"></i> </button>
+        <button class="send">Envoyer</button>
       </form>
     </div>
   </div>
-  <footer class="h-fit flex bg-gray-900 mt-10 p-10 text-center justify-center">
+  <footer class="h-fit flex bg-gray-900 mt-10 p-10 text-center justify-center bottom-0 absolute w-full">
     <p class="text-xl text-indigo-300">Pigeon Inc - 2022</p>
   </footer>
   <script
