--- a/public/chat.html
+++ b/public/chat.html
@@ -27,7 +27,7 @@
   <main class="chat-main flex">
     <div class="chat-sidebar bg-gray-800">
       <h2 id="room-name"></h2>
-        <h3><i class="fas fa-user"></i> Online</h3>
+        <h3><i class="fas fa-user"></i> Membres en ligne</h3>
         <ul id="users">
         </ul>
         <a href="index.html" class="btn bg-indigo-300 hover:bg-gray-100 text-black" id="leave-btn">Quitter la room</a>
