--- a/public/index.html
+++ b/public/index.html
@@ -51,10 +51,11 @@
               <label for="room" class="block mr-2 text-center w-20 text-gray-100">Choix de la room</label>
               <select name="room" id="room" class="rounded-3xl p-2 pl-3">
                 <option value="Business">Business</option>
-                <option value="Développement">Développement</option>
-                <option value="Sports">Sports</option>
-                <option value="Actualités">News</option>
-                <option value="Chats">Chats</option>
+                <option value="Informatique">Informatique</option>
+                <option value="Sport">Sport</option>
+                <option value="Actualités">Actualités</option>
+                <option value="Musique">Musique</option>
+                <option value="Cinéma">Cinéma</option>
               </select>
             </div>
             <div class="mt-5 bg-gray-200 hover:bg-indigo-300 focus:outline-none rounded-3xl p-2 pr-3 pl-3 shadow-xl">
