--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,12 @@
         </nav>
     </header>
     <main class="flex flex-wrap justify-center bg-gray-700 h-fit">
-      <h1 class="text-5xl w-3/4 text-center mt-10">Connection à la room</h1>
+      <h1 class="text-5xl w-3/4 text-center mt-10 text-white">Connection à la room</h1>
       <div class="bg-gray-200 w-1/2 m-auto mt-20 mb-56">
         <form action="chat.html" class="flex flex-wrap justify-center p-5 bg-gray-900">
           <div class="mt-5 w-full flex justify-center items-center">
-            <label for="email" class="block mr-2 text-center w-20 text-gray-100">E-mail</label>
-              <input class="rounded-3xl p-2 pl-3"
+            <label for="email" class="block mr-2 text-center w-32 text-gray-100">E-mail</label>
+              <input class="rounded-3xl p-2 pl-3 w-64"
                 type="email"
                 name="email"
                 id="email"
@@ -39,8 +39,8 @@
               />
             </div>
             <div class="mt-5 w-full flex justify-center items-center">
-              <label for="username" class="block mr-2 text-center w-20 text-gray-100">Identifiant</label>
-              <input class="rounded-3xl p-2 pl-3"
+              <label for="username" class="block mr-2 text-center w-32 text-gray-100">Identifiant</label>
+              <input class="rounded-3xl p-2 pl-3 w-64"
                 type="text"
                 name="username"
                 id="username"
@@ -48,8 +48,8 @@
                 required/>
             </div>
             <div class="mt-5 w-full flex justify-center items-center">
-              <label for="room" class="block mr-2 text-center w-20 text-gray-100">Choix de la room</label>
-              <select name="room" id="room" class="rounded-3xl p-2 pl-3">
+              <label for="room" class="block mr-2 text-center w-32 text-gray-100">Choix de la room</label>
+              <select name="room" id="room" class="rounded-3xl p-2 pl-3 w-64">
                 <option value="Business">Business</option>
                 <option value="Développement">Développement</option>
                 <option value="Sports">Sports</option>
